--- a/layouts/partials/licence.html
+++ b/layouts/partials/licence.html
@@ -1,4 +1,4 @@
-<p xmlns:cc="http://creativecommons.org/ns#">本作品使用 <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1"
+<p xmlns:cc="http://creativecommons.org/ns#">本作品使用 <a href="https://creativecommons.org/licenses/by/4.0/deed.zh-hans"
         target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0 许可<img
             style="height:22px!important;margin-left:3px;vertical-align:text-bottom;display:inline;"
             src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img
